# playstore

./: .gitignore  Makefile  README.md  pyproject.toml
data/: clean_googleplay_data_OLD.py  clean_googleplay_data_category_OLD.py
docs/: index.html  playstore.html  search.js
docs/playstore/: config.html  main.html  pages.html  utils.html
docs/playstore/pages/: average-distribution.html  category-analysis.html  home-page.html  prediction.html
notebooks/: 001_exploratory_analysis.ipynb  002_prediction.ipynb  cleaned_googleplaystore.csv  linear_regresion_not_used.ipynb  prediction_1_not_used.ipynb  prediction_2_not_used.ipynb  prediction_correct_not_used.ipynb  processed_googleplaystore_not_used.csv  segmentacni_analyza_not_used.ipynb
src/playstore/: config.py  main.py
src/playstore/assets/css/: style.css
src/playstore/pages/: average-distribution.py  category-analysis.py  home-page.py  prediction.py
